# palantir-types

./: .gitignore  Cargo.toml  lets.yaml
.github/workflows/: rust.yml
.hooks/: pre-commit
benches/: string.rs
src/: lib.rs
src/messages/: apm_v1.rs  mod.rs
src/parts/: mod.rs  string.rs
src/primitives/: character.rs  mod.rs  string.rs
src/primitives/character/: bitmap.rs  error.rs  impls.rs  mod.rs
src/primitives/character/impls/: deku.rs  mod.rs  standard.rs
