# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
version = "0.0.1"
name       = "palantir-types"
license    = "MIT OR Apache-2.0"
edition    = "2018"
[lib]
crate-type = ["lib"]
test       = true
doctest    = true
doc        = true
path       = "src/lib.rs"

[dependencies]
deku        = "0.10.0"
lazy_static = "1.4.0"
funty       = "1.1.0"   # https://github.com/myrrlyn/funty/issues/3

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "string"
harness = false
